fixed right nav overlapping issue

--- a/src/css/navigation.css
+++ b/src/css/navigation.css
@@ -1,6 +1,5 @@
 /*
 	Navigation
-
 	Author: Chase Willden;
 */
 
@@ -132,55 +131,63 @@ nav.nav-top.active > ul:nth-child(2) > li > a:hover{
 
 /*
 	Navigation Right
+	Won't be visible until over 1000px
 */
 
 nav.nav-right{
-	z-index: 10000;
-}
-
-nav.nav-right ul{
-	list-style: none;
-}
-
-nav.nav-right ul ul.sub{
-	padding-left: 16px;
 	display: none;
 }
+@media (min-width: 1000px){
 
-nav.nav-right > ul > li{
-	display: block;
-}
+	nav.nav-right{
+		z-index: 10000;
+		display: block;
+	}
 
-nav.nav-right a{
-	text-decoration: none;
-	display: block;
-	color: #808080;
-	font-size: 15px;
-	border-left: solid 2px transparent;
-	transition: ease border-left-color .2s;
-	-o-transition: ease border-left-color .2s;
-	-moz-transition: ease border-left-color .2s;
-	-webkit-transition: ease border-left-color .2s;
-}
+	nav.nav-right ul{
+		list-style: none;
+	}
 
-nav.nav-right > ul > li > ul.sub > li > a{
-	padding: 3px 10px;
-}
+	nav.nav-right ul ul.sub{
+		padding-left: 16px;
+		display: none;
+	}
 
-nav.nav-right > ul > li > a{
-	padding: 3px 10px;
-}
+	nav.nav-right > ul > li{
+		display: block;
+	}
 
-nav.nav-right a:hover, nav.nav-right .active a{
-	border-left-color: orange;
-}
+	nav.nav-right a{
+		text-decoration: none;
+		display: block;
+		color: #808080;
+		font-size: 15px;
+		border-left: solid 2px transparent;
+		transition: ease border-left-color .2s;
+		-o-transition: ease border-left-color .2s;
+		-moz-transition: ease border-left-color .2s;
+		-webkit-transition: ease border-left-color .2s;
+	}
 
-nav.nav-right > ul.menu-right{
-	float: right;
-	text-align: right;
-}
+	nav.nav-right > ul > li > ul.sub > li > a{
+		padding: 3px 10px;
+	}
 
-nav.nav-right .empty, nav.nav-right .empty *, nav.nav-right .empty:hover, nav.nav-right .empty *:hover{
-	border: none;
-	background-color: none;
+	nav.nav-right > ul > li > a{
+		padding: 3px 10px;
+	}
+
+	nav.nav-right a:hover, nav.nav-right .active a{
+		border-left-color: orange;
+	}
+
+	nav.nav-right > ul.menu-right{
+		float: right;
+		text-align: right;
+	}
+
+	nav.nav-right .empty, nav.nav-right .empty *, nav.nav-right .empty:hover, nav.nav-right .empty *:hover{
+		border: none;
+		background-color: none;
+	}
 }
